# components-rs

./: .gitignore  Cargo.toml  build.rs  index.html  readme.md  rustfmt.toml  tailwind.config.js
assets/: basic.css  tw.css
src/: example.rs  lib.rs
src/components/: brand.rs  button.rs  flex.rs  mod.rs  segmented_control.rs  shell.rs  table.rs  tabs.rs  text.rs  tooltip.rs  ty.rs
src/helpers/: colours.rs  css.rs  js.rs  mod.rs  mutable.rs  safety.rs  theme.rs
