[package]
name = "rm-components"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-signals = "0.3.33"
wasm-bindgen = { version = "0.2.84", default-features = false, features = [
  "std",
  "spans",
] }
wasm-bindgen-futures = { version = "0.4.30", default-features = false }
gloo = { version = "0.11.0", features = ["futures"] }
dominator = "0.5.34"
console_error_panic_hook = "0.1.7"
derive_builder = "0.12.0"
custom_derive = "0.1.7"
factoryizer = "0.1.0"
lazy_static = "1.4.0"
rand = "0.8.5"
hex_color = "3.0.0"
colors-transform = "0.2.11"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
